# zecore

./: Cargo.toml  README.md
api/: Cargo.toml  idl.json
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  loaders.rs
api/src/state/: bus.rs  config.rs  mod.rs  proof.rs  treasury.rs
program/: Cargo.toml
program/src/: claim.rs  close.rs  initialize.rs  lib.rs  mine.rs  open.rs  reset.rs  stake.rs  update.rs
