[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "3.0.0"
edition = "2025"
license = "Apache-2.0"
homepage = "https://zeminers.vip/"
documentation = ""
repository = "https://github.com/zeminers/zecore"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[workspace.dependencies]
array-const-fn-init = "0.1.1"
bytemuck = "1.14.3"
const-crypto = "0.1.0"
drillx = { version = "2.0.0", features = ["solana"] }
mpl-token-metadata = "4.1.2"
num_enum = "0.7.2"
ze-api = { path = "api" }
ze-boost-api = "1.1"
solana-program = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [ "no-entrypoint" ] } 
static_assertions = "1.1.0"
steel = { features = ["spl"], version = "2.0" }
thiserror = "1.0.57"
